# parallel_computing_project

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  main.cpp
simulation/: CMakeLists.txt  CmakeLists.txt
simulation/include/: Grid.hpp  HeatEquation.hpp  SubGrid.hpp  SubGridInformation.hpp
simulation/src/: Grid.cpp  SubGrid.cpp  SubGridInformation.cpp
visualization/: CMakeLists.txt  CmakeLists.txt
visualization/include/: ColorMap.hpp  GridRenderer.hpp  Window.hpp
visualization/src/: ColorMap.cpp  GridRenderer.cpp  Window.cpp
